--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,10 @@
             "name": "C/C++: gcc build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/minishell",
-            "args": ["echo", "hallo"],
+            "program": "${workspaceFolder}/minishell",
+            "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
