--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc build active file",
-            "command": "/usr/bin/gcc",
+            "command": "",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -12,7 +12,7 @@
                 "${fileDirname}/minishell"
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "${workspacefolder}"
             },
             "problemMatcher": [
                 "$gcc"
